fix overflow bug

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   min-height: 100vh;
   align-items: center;
   font-family: "Poppins", sans-serif;
-  overflow: hidden;
+  overflow: auto;
   justify-content: space-between;
 }
 
@@ -41,7 +41,7 @@ body {
 
 .tail {
   width: 100%;
-  height: 120px;
+  height: 130px;
 }
 
 .container {
